finished Logic and flow of Trap encounter  - added new style and dimensions to resource file  - started fixing CharacterFragment UI and RecyclerViewers    - added ObservableFields for Inventory object and add/remove methods inside their adapters

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,10 @@
 
         <Button
             android:id="@+id/btn_abandon"
-            android:layout_width="69dp"
+            android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:text="@string/abandon"
-            android:textSize="12sp"
+            android:textSize="@dimen/txt_size_small"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_continue_game"
