--- a/app/src/main/res/layout/character_ability_list_details.xml
+++ b/app/src/main/res/layout/character_ability_list_details.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/ability_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/press_start_2p"
-        android:text="TextView"
-        android:textSize="12sp" />
+        android:fontFamily="@font/press_start_2p"/>
 
     <TextView
         android:id="@+id/ability_detail"
@@ -17,10 +15,7 @@
         android:layout_below="@+id/ability_label"
         android:layout_alignParentStart="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="11dp"
-        android:fontFamily="@font/press_start_2p"
-        android:text="TextView"
-        android:textSize="10sp" />
+        android:layout_marginTop="11dp"/>
 
     <Button
         android:id="@+id/btn_drop_ability"
@@ -28,10 +23,8 @@
         android:layout_height="@dimen/btn_drop_height"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_marginTop="17dp"
         android:layout_marginEnd="0dp"
-        android:fontFamily="@font/press_start_2p"
-        android:text="Drop"
-        android:textSize="8dp" />
+        android:text="@string/drop_button"
+        android:textSize="@dimen/txt_size_small" />
 </RelativeLayout>
