--- a/app/src/main/res/layout/trap_dialogue_details.xml
+++ b/app/src/main/res/layout/trap_dialogue_details.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="newDialogue"
@@ -9,17 +7,18 @@
     </data>
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="174dp"
-            android:layout_marginEnd="165dp"
-            android:gravity="center"
-            android:text="temp" />
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:textSize="@dimen/txt_size_medium"
+            android:fontFamily="@font/press_start_2p"
+            android:text="@{newDialogue}" />
     </RelativeLayout>
 </layout>
