--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,8 @@
     <dimen name="btn_drop_height">35dp</dimen>
     <dimen name="btn_drop_width">70dp</dimen>
 
-    <dimen name="txt_size_small">8dp</dimen>
-    <dimen name="txt_size_normal">10dp</dimen>
-    <dimen name="txt_size_label">10dp</dimen>
+    <dimen name="txt_size_small">8sp</dimen>
+    <dimen name="txt_size_medium">10sp</dimen>
+    <dimen name="txt_size_normal">12sp</dimen>
+    <dimen name="txt_size_large">14sp</dimen>
 </resources>
