RecyclerViewer in CharacterFragment now uses databinding  - updates when inventory items and dot/special effects added/removes  changed CharacterEntity into abstract   - removes Damage class   - methods implemented only in Character now inside CharacterEntity for Enemies to use   - returns statements in adding dot/special, true if swap from false->true, otherwise false   - return statement in removing dot/special, true if still true after removal Trap encounter  - displays dialogue text immediately entering the encounter    - if more dialogue, continue button, otherwise enter into encounter/second state CharacterViewModel  - Dot and Special changes now update properly  - Item consumable functionality fixed/added

--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -136,7 +136,7 @@
 
                 <TextView
                     android:id="@+id/strNumber"
-                    android:layout_width="34dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="22dp"
                     android:gravity="center"
                     android:textSize="@dimen/txt_size_small"
@@ -159,7 +159,7 @@
 
                 <TextView
                     android:id="@+id/spdNumber"
-                    android:layout_width="34dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="22dp"
                     android:gravity="center"
                     android:textSize="@dimen/txt_size_small"
@@ -182,15 +182,15 @@
 
                 <TextView
                     android:id="@+id/intNumber"
-                    android:layout_width="34dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="22dp"
                     android:gravity="center"
                     android:textSize="@dimen/txt_size_small"
-                    app:stat="@{characterVM.intelligence}"
                     app:base="@{characterVM.intBase}"
                     app:layout_constraintEnd_toEndOf="@+id/intelligence"
                     app:layout_constraintStart_toStartOf="@+id/intelligence"
-                    app:layout_constraintTop_toBottomOf="@+id/intelligence" />
+                    app:layout_constraintTop_toBottomOf="@+id/intelligence"
+                    app:stat="@{characterVM.intelligence}" />
 
                 <TextView
                     android:id="@+id/constitution"
@@ -205,7 +205,7 @@
 
                 <TextView
                     android:id="@+id/conNumber"
-                    android:layout_width="34dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="22dp"
                     android:gravity="center"
                     android:textSize="@dimen/txt_size_small"
