--- a/app/src/main/res/layout/character_item_list_details.xml
+++ b/app/src/main/res/layout/character_item_list_details.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+<layout>
+    <data>
+        <variable
+            name="item"
+            type="com.habbybolan.textadventure.model.inventory.Item" />
+    </data>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent" android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/item_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/item_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/item_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_below="@+id/item_label"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="11dp" />
+        <TextView
+            android:id="@+id/item_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_below="@+id/item_label"
+            android:text="@{item.name}"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="11dp" />
 
-    <Button
-        android:id="@+id/btn_drop_item"
-        android:layout_width="@dimen/btn_drop_width"
-        android:layout_height="@dimen/btn_drop_height"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="0dp"
-        android:text="@string/drop_button"
-        android:textSize="@dimen/txt_size_small" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/btn_drop_item"
+            android:layout_width="@dimen/btn_drop_width"
+            android:layout_height="@dimen/btn_drop_height"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="17dp"
+            android:layout_marginEnd="0dp"
+            android:text="@string/drop_button"
+            android:textSize="@dimen/txt_size_small" />
+    </RelativeLayout>
+</layout>
