added consume button and functionality to items that can be consumed  - custom buttons and logic (default/pressed/disabled) created for drop/consume buttons  - state observer in RecyclerViewer for when drop/consume button is disabled generalized dialogue RecyclerView so all fragment can use same adapter created models for Dots and special effects  - CharacterEntity model uses theses objects instead of implementing them  fixed RecyclerView for dot/special list in CharacterFragment from double adding/deleting items   - now calls notifyAllX observer for special and dot changes   - special/dot now updates with duration change   - fixed removeInputDot and removeInputSpecial so it actually removes the items and doesn't return a value

--- a/app/src/main/res/layout/character_ability_list_details.xml
+++ b/app/src/main/res/layout/character_ability_list_details.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="ability"
             type="com.habbybolan.textadventure.model.inventory.Ability" />
     </data>
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent" android:layout_height="wrap_content">
 
         <TextView
@@ -33,6 +32,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="17dp"
             android:layout_marginEnd="0dp"
+            android:background="@drawable/custom_drop_button"
             android:text="@string/drop_button"
             android:textSize="@dimen/txt_size_small" />
     </RelativeLayout>
