--- a/app/src/main/res/layout/character_dot_special_details.xml
+++ b/app/src/main/res/layout/character_dot_special_details.xml
@@ -2,7 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
-            name="dotType"
+            name="type"
+            type="String" />
+        <variable
+            name="duration"
             type="String" />
     </data>
     <RelativeLayout
@@ -10,10 +13,20 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txt_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{dotType}" />
+            android:text="@{type}" />
+
+        <TextView
+            android:id="@+id/txt_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="22dp"
+            android:layout_toEndOf="@+id/txt_type"
+            android:gravity="center"
+            android:text="@{duration}" />
     </RelativeLayout>
 </layout>
