--- a/app/src/main/res/layout/dialogue_details.xml
+++ b/app/src/main/res/layout/dialogue_details.xml
@@ -8,8 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView2"
