--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="btn_drop_height">35dp</dimen>
-    <dimen name="btn_drop_width">70dp</dimen>
+    <dimen name="btn_drop_width">40dp</dimen>
+
+    <dimen name="btn_consume_height">35dp</dimen>
+    <dimen name="btn_consume_width">40dp</dimen>
 
     <dimen name="txt_size_small">8sp</dimen>
     <dimen name="txt_size_medium">10sp</dimen>
