--- a/app/src/main/res/layout/activity_character_choice.xml
+++ b/app/src/main/res/layout/activity_character_choice.xml
@@ -202,13 +202,13 @@
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/mana_health_bar_width"
+                android:layout_height="@dimen/mana_health_bar_height"
                 android:layout_marginTop="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView"
-                app:srcCompat="@drawable/health_mana" />
+                app:srcCompat="@drawable/health_mana_bar" />
 
             <TextView
                 android:id="@+id/health_bar"
@@ -222,14 +222,14 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                 app:layout_constraintEnd_toEndOf="@+id/imageView4"
-                app:layout_constraintHorizontal_bias="0.13"
+                app:layout_constraintHorizontal_bias="0.142"
                 app:layout_constraintStart_toStartOf="@+id/imageView4"
                 app:layout_constraintTop_toTopOf="@+id/imageView4"
-                app:layout_constraintVertical_bias="0.478" />
+                app:layout_constraintVertical_bias="0.523" />
 
             <TextView
                 android:id="@+id/mana_bar"
-                android:layout_width="33dp"
+                android:layout_width="32dp"
                 android:layout_height="14dp"
                 android:fontFamily="@font/press_start_2p"
                 android:gravity="center"
@@ -239,10 +239,10 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                 app:layout_constraintEnd_toEndOf="@+id/imageView4"
-                app:layout_constraintHorizontal_bias="0.902"
+                app:layout_constraintHorizontal_bias="0.782"
                 app:layout_constraintStart_toStartOf="@+id/imageView4"
                 app:layout_constraintTop_toTopOf="@+id/imageView4"
-                app:layout_constraintVertical_bias="0.478" />
+                app:layout_constraintVertical_bias="0.523" />
 
             <TextView
                 android:id="@+id/abilityView"
