--- a/app/src/main/res/layout/fragment_random_benefit.xml
+++ b/app/src/main/res/layout/fragment_random_benefit.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
-            name="trapVM"
-            type="com.habbybolan.textadventure.viewmodel.encounters.TrapEncounterViewModel"/>
+            name="benefitVM"
+            type="com.habbybolan.textadventure.viewmodel.encounters.RandomBenefitViewModel" />
+
     </data>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".view.encounter.TrapFragment">
+        tools:context=".view.encounter.RandomBenefitFragment">
+
         <LinearLayout
             android:id="@+id/trap_container"
             android:layout_width="match_parent"
@@ -28,7 +32,15 @@
                 android:id="@+id/rv_dialogue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <FrameLayout
+                android:id="@+id/frame_inventory_snippet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </FrameLayout>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+
 </layout>
